// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/VehicleResults/ViolationsInspector AtLeastOneViolatioWithFullViolationTextAndSummaryFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      2 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th aria-sort="ascending"
                            class="sort-column"
                        >
                          Date
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Violation
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Location
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2018"
                      >
                        <th colspan="1">
                          2018
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          04/26/2018
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2021"
                      >
                        <th colspan="1">
                          2021
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row table-warning no-fines-breakdown"
                          data-testid="summons 7310127603"
                      >
                        <td>
                          02/17/2021
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            School Zone Speed Camera Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Staten Island
                          </span>
                          <span class="location-description">
                            (Victory Blvd. @ Eddy St.)
                          </span>
                        </td>
                        <td class="fines">
                          $87.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector AtLeastOneViolationWithFullViolationTextAndFullFines play-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines summary
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      2 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th aria-sort="ascending"
                            class="sort-column"
                        >
                          Date
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Violation
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Location
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2018"
                      >
                        <th colspan="1">
                          2018
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          04/26/2018
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2021"
                      >
                        <th colspan="1">
                          2021
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row table-warning "
                          data-testid="summons 7310127603"
                      >
                        <td>
                          02/17/2021
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            School Zone Speed Camera Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Staten Island
                          </span>
                          <span class="location-description">
                            (Victory Blvd. @ Eddy St.)
                          </span>
                        </td>
                        <td class="fines">
                          <div class="fines-breakdown">
                            <div class="summary-box keys">
                              <div>
                                Initial:
                              </div>
                              <div>
                                Interest:
                              </div>
                              <div class="fine-added">
                                Penalties:
                              </div>
                              <div>
                                Total:
                              </div>
                              <div>
                                Reductions:
                              </div>
                              <div class="fine-subtracted">
                                Paid:
                              </div>
                              <div class>
                                Outstanding:
                              </div>
                            </div>
                            <div class="summary-box values fines"
                                 role="math"
                                 aria-label="$50.00 fined + $12.69 in interest + $25.00 in penalties - $0.69 reduced - $10.00 paid = $77.00 oustanding"
                            >
                              <div class="math-symbols">
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-added">
                                  +&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-subtracted">
                                  –&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                              </div>
                              <div class="amounts">
                                <div>
                                  $50.00
                                </div>
                                <div>
                                  $12.69
                                </div>
                                <div class="fine-added">
                                  $25.00
                                </div>
                                <div>
                                  $87.69
                                </div>
                                <div>
                                  $0.69
                                </div>
                                <div class="fine-subtracted">
                                  $10.00
                                </div>
                                <div class>
                                  $77.00
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector AtLeastOneViolationWithViolationIconsAndFullFines play-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines summary
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      2 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th aria-sort="ascending"
                            class="sort-column"
                        >
                          Date
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Violation
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Location
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2018"
                      >
                        <th colspan="1">
                          2018
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          04/26/2018
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2021"
                      >
                        <th colspan="1">
                          2021
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row table-warning "
                          data-testid="summons 7310127603"
                      >
                        <td>
                          02/17/2021
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            School Zone Speed Camera Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Staten Island
                          </span>
                          <span class="location-description">
                            (Victory Blvd. @ Eddy St.)
                          </span>
                        </td>
                        <td class="fines">
                          <div class="fines-breakdown">
                            <div class="summary-box keys">
                              <div>
                                Initial:
                              </div>
                              <div>
                                Interest:
                              </div>
                              <div class="fine-added">
                                Penalties:
                              </div>
                              <div>
                                Total:
                              </div>
                              <div>
                                Reductions:
                              </div>
                              <div class="fine-subtracted">
                                Paid:
                              </div>
                              <div class>
                                Outstanding:
                              </div>
                            </div>
                            <div class="summary-box values fines"
                                 role="math"
                                 aria-label="$50.00 fined + $12.69 in interest + $25.00 in penalties - $0.69 reduced - $10.00 paid = $77.00 oustanding"
                            >
                              <div class="math-symbols">
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-added">
                                  +&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                                <div class="fine-subtracted">
                                  –&nbsp;
                                </div>
                                <div>
                                  &nbsp;&nbsp;&nbsp;
                                </div>
                              </div>
                              <div class="amounts">
                                <div>
                                  $50.00
                                </div>
                                <div>
                                  $12.69
                                </div>
                                <div class="fine-added">
                                  $25.00
                                </div>
                                <div>
                                  $87.69
                                </div>
                                <div>
                                  $0.69
                                </div>
                                <div class="fine-subtracted">
                                  $10.00
                                </div>
                                <div class>
                                  $77.00
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector AtLeastOneViolationWithViolationIconsAndSummaryFines smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 d-md-flex justify-content-md-between">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-primary"
                              type="button"
                      >
                        hide violations
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show fines details
                      </button>
                      <button class="btn btn-outline-primary btn-block w-100"
                              type="button"
                      >
                        show violation summary
                      </button>
                    </div>
                  </div>
                </div>
                <div class="table-responsive violations-table-body-wrapper"
                     id="violations-table-e5f6g7h8"
                     data-testid="vehicle-violations-list"
                >
                  <table class="table table-striped table-sm violations-table">
                    <caption>
                      2 parking and camera violations
                    </caption>
                    <thead class="thead-light table-light">
                      <tr>
                        <th aria-sort="ascending"
                            class="sort-column"
                        >
                          Date
                          <svg aria-labelledby="svg-inline--fa-title-angle-up"
                               data-prefix="fas"
                               data-icon="angle-up"
                               class="svg-inline--fa fa-angle-up "
                               role="img"
                               xmlns="http://www.w3.org/2000/svg"
                               viewbox="0 0 448 512"
                          >
                            <title id="svg-inline--fa-title-angle-up">
                              angle-up icon
                            </title>
                            <path fill="currentColor"
                                  d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"
                            >
                            </path>
                          </svg>
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Violation
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Location
                        </th>
                        <th aria-sort="none"
                            class
                        >
                          Fines
                        </th>
                      </tr>
                    </thead>
                    <tbody data-testid="violations-table-body">
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2018"
                      >
                        <th colspan="1">
                          2018
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row  no-fines-breakdown"
                          data-testid="summons 7310127604"
                      >
                        <td>
                          04/26/2018
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            No Standing - Bus Stop
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Brooklyn
                          </span>
                          <span class="location-description">
                            (8002 3rd Ave)
                          </span>
                        </td>
                        <td class="fines">
                          N/A
                        </td>
                      </tr>
                      <tr class="sort-divider"
                          data-testid="sort-divider-date-ascending-2021"
                      >
                        <th colspan="1">
                          2021
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                        <th colspan="1">
                        </th>
                      </tr>
                      <tr class="violation-row table-warning no-fines-breakdown"
                          data-testid="summons 7310127603"
                      >
                        <td>
                          02/17/2021
                        </td>
                        <td class="violation-description">
                          <div class="humanized-description">
                            School Zone Speed Camera Violation
                          </div>
                        </td>
                        <td class="location">
                          <span class="borough">
                            Staten Island
                          </span>
                          <span class="location-description">
                            (Victory Blvd. @ Eddy St.)
                          </span>
                        </td>
                        <td class="fines">
                          $87.00
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components/VehicleResults/ViolationsInspector NoViolations smoke-test 1`] = `
<div class="container-fluid">
  <div class="row">
    <div class="col-md-12">
      <div class="vehicles">
        <div class="vehicle card">
          <ul class="list-group-flush list-group">
            <li class="list-group-item">
              <div class="violations-table-wrapper"
                   style="width: 100%;"
              >
                <div class="violations-table-header"
                     data-testid="vehicle-violations-controls"
                >
                  <div class="row">
                    <div class="d-grid gap-2 ">
                      <button aria-controls="violations-table-e5f6g7h8"
                              aria-expanded="false"
                              class="btn btn-block w-100 btn-outline-secondary"
                              disabled
                              type="button"
                      >
                        no violations
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
